[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "mariadb>=1.1.14",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "pyspark>=4.1.1",
]
