[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "mariadb>=1.1.14",
    "mysql-connector-python>=9.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic-settings>=2.13.1",
    "pyspark>=4.1.1",
    "sqlalchemy>=2.0.48",
]
